--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <body>
 	<h1>Test</h1>
 	<script src="index.js"></script>
+	<script>
+		new kursor{
+			removeDefaultCursor: true,
+		}
+	</script>
   </body>
 </html>
