--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<h1>Test</h1>
 	<script src="index.js"></script>
 	<script>
-		new kursor{
+		new kursor({
 			removeDefaultCursor: true,
-		}
+		})
 	</script>
   </body>
 </html>
